# SkyWatch

./: .gitignore  README.md  demo_commands.sh  pyproject.toml
examples/: policies.json  s3_snapshot_public_unencrypted.json  s3_snapshot_secure_ok.json
src/skywatch_policy_engine/: __init__.py  builtins.py  cli.py  context.py  engine.py  errors.py  finding_factory.py  guard.py  interfaces.py  registry.py  repository.py  serialization.py  types.py
src/skywatch_policy_engine/rules/: __init__.py  common.py  encryption.py  public_acl.py  public_policy.py  secure_transport.py
tests/: test_encryption_rule.py  test_engine_mvp.py  test_engine_validation.py  test_public_acl_rule.py  test_public_policy_rule.py  test_severity_override.py
